--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -16,5 +16,11 @@
   },
   "deleteButton": {
     "message": "Delete"
+  },
+  "editButton": {
+    "message": "Edit"
+  },
+  "saveButton": {
+    "message": "Save"
   }
 }
