--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -16,5 +16,11 @@
   },
   "deleteButton": {
     "message": "Удалить"
+  },
+  "editButton": {
+    "message": "Редактировать"
+  },
+  "saveButton": {
+    "message": "Сохранить"
   }
 }
